KRunner: Auto restart on crash

BUG: 336365